projects - social sharing

--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -26,7 +26,7 @@
 				
 			    <div class="lock-size" layout="row" layout-align="center center" style="position: absolute; top: 364px; right: 8px;">
 					<md-fab-speed-dial md-open="demo.isOpen" md-direction="left"
-					ng-class="demo.selectedMode">
+					ng-class="md-scale">
 						<md-fab-trigger>
 							<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; top: 364px; right: 8px;">
 						        <md-icon style="color: {{base_hue_lighter.value}};">share</md-icon>
@@ -46,7 +46,7 @@
 						</md-fab-actions>
 					</md-fab-speed-dial>
 				</div>
-				
+
 		    	<div flex="100" ng-attr-style="margin-bottom: 100px; width: 100%; background-color: {{base_hue_lightest.value}}; min-height: 400px;" layout-margin layout-padding>
 		    		<h1 class="type heading" style="margin-bottom: 24px;">{{projectPage.data.title}}</h1>
 			    	<div ng-repeat="content in projectPage.data.page.contents">
