--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -25,7 +25,7 @@
 				</div>
 				
 			    <div class="lock-size" layout="row" layout-align="center center" style="position: absolute; top: 364px; right: 8px;">
-					<md-fab-speed-dial md-open="demo.isOpen" md-direction="left"
+					<md-fab-speed-dial md-open="false" md-direction="left"
 					ng-class="md-scale">
 						<md-fab-trigger>
 							<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; top: 364px; right: 8px;">
