--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -28,7 +28,7 @@
 					<md-fab-speed-dial md-open="false" md-direction="left"
 					ng-class="md-scale">
 						<md-fab-trigger>
-							<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; top: 364px; right: 8px;">
+							<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}};">
 						        <md-icon style="color: {{base_hue_lighter.value}};">share</md-icon>
 						    </md-button>
 						</md-fab-trigger>
