fling projects page

--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -25,8 +25,8 @@
 				</div>
 				
 			    <div class="lock-size" layout="row" layout-align="center center" style="position: absolute; top: 364px; right: 8px;">
-					<md-fab-speed-dial md-direction="left" ng-class="md-scale">
-						
+					<md-fab-speed-dial md-direction="left" md-open="false" ng-class="md-scale">
+
 						<md-fab-trigger>
 							<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}};">
 						        <md-icon style="color: {{base_hue_lighter.value}};">share</md-icon>
