--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -24,8 +24,9 @@
 					<img style="min-height: 100%; min-width: 100%; height: auto; width: auto; position: absolute; top: -35%; left: -12.5%; transform: scale(.9);" ng-src="{{projectPage.data.page.foreground.images.source}}">
 				</div>
 				
-			    <div class="lock-size" layout="row" layout-align="center center" style="position: absolute; top: 364px; right: 8px;">
-					<md-fab-speed-dial md-direction="left" md-open="false" ng-class="md-scale">
+			    <div layout="row" layout-align="center center" style="position: absolute; top: 364px; right: 8px;">
+
+					<md-fab-speed-dial md-direction="left" ng-class="md-scale">
 
 						<md-fab-trigger>
 							<md-button class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}};">
@@ -44,7 +45,9 @@
 								<md-icon md-svg-src="media/instagram-mma-green.png" aria-label="Share on Instagram"></md-icon>
 							</md-button>
 						</md-fab-actions>
+
 					</md-fab-speed-dial>
+
 				</div>
 
 		    	<div flex="100" ng-attr-style="margin-bottom: 100px; width: 100%; background-color: {{base_hue_lightest.value}}; min-height: 400px;" layout-margin layout-padding>
