--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -35,9 +35,11 @@
 						</md-fab-trigger>
 
 						<md-fab-actions>
-							<md-button aria-label="Twitter" class="md-fab md-raised md-mini">
-								<md-icon md-svg-src="media/twitter.png" aria-label="Share onTwitter"></md-icon>
-							</md-button>
+							<a href="#" socialshare socialshare-provider="twitter" socialshare-text="{{projectPage.data.title}}" socialshare-hashtags="mma texas" socialshare-url="https://mmatexas.com">
+								<md-button aria-label="Twitter" class="md-fab md-raised md-mini">
+									<md-icon md-svg-src="media/twitter.png" aria-label="Share onTwitter"></md-icon>
+								</md-button>
+							</a>
 							<md-button aria-label="Facebook" class="md-fab md-raised md-mini">
 								<md-icon md-svg-src="media/facebook.png" aria-label="Share on Facebook"></md-icon>
 							</md-button>
