--- a/lib/client/app/application/landing/partials/slideshow_2.html
+++ b/lib/client/app/application/landing/partials/slideshow_2.html
@@ -17,7 +17,7 @@
     @media screen and (max-width: 479px){.slideshow_slide_image {height:100%!important; width: auto!important;}}
 </style>
 <div class="lightweight-hero--slideshow component slideshow" hero-element style="position: relative;">
-	<span id="top" hash="top" style="position: absolute; top:-100px; left: 0; height: 1px; width: 1px;"></span>
+	<!-- <span id="top" hash="top" style="position: absolute; top:-100px; left: 0; height: 1px; width: 1px;"></span>
 
 	<div class="slide--display" style="width: 100%;" hero-slider-content-container ng-repeat="slide in secondary_slideshow_hero.images" orientation-aware>
 		<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" ng-class="{'slide-transition': $index == visible_slide}" ng-show="$index == visible_slide" style="display: block; margin: 0 auto; min-width: 100%; min-height: 100%; width: auto!important; height: auto!important;">
@@ -35,14 +35,15 @@
 			<span flex="100" flex-sm="75" flex-gt-sm="50" style="text-align: center;">
 				<p class="slide-text-one" ng-class="{'active': $index == visible_slide}" style="color: {{base_hue_lightest.value}};">{{slide.metadata.name}}</p>
 				<p class="slide-text-two" ng-class="{'active': $index == visible_slide}" style="color: {{base_hue_lightest.value}};">{{slide.metadata.description}}</p>
-				<!-- <br>
-				<a href="/gallery">
-					<md-button class="custom-deep-button lightweight-round slide-button-one" ng-class="{'active': $index == visible_slide}" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; width: 250px; height: 48px">View All Galleries</md-button>
-				</a> -->
 			</span>
 
 		</div>
-	</div>
+	</div> -->
+	<slick init-onload=true data-slick='{"slidesToShow": 4, "slidesToScroll": 1}'>
+	 <div ng-repeat="slide in secondary_slideshow_hero.images">
+	 	<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" style="display: block; margin: 0 auto; min-width: 100%; min-height: 100%; width: auto!important; height: auto!important;">
+	 </div>
+	</slick>
 </div>
 
 <!-- Hero Slideshow -->
