--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -35,7 +35,7 @@
 						</md-fab-trigger>
 
 						<md-fab-actions>
-							<a href="#" socialshare socialshare-provider="twitter" socialshare-text="{{projectPage.data.title}}" socialshare-hashtags="mma texas" socialshare-url="https://mmatexas.com">
+							<a href="#" socialshare socialshare-provider="twitter" socialshare-text="{{projectPage.data.title}}" socialshare-hashtags="mma texas" socialshare-url="{{pageURL}}">
 								<md-button aria-label="Twitter" class="md-fab md-raised md-mini">
 									<md-icon md-svg-src="media/twitter.png" aria-label="Share onTwitter"></md-icon>
 								</md-button>
