--- a/lib/client/app/application/landing/partials/slideshow_2.html
+++ b/lib/client/app/application/landing/partials/slideshow_2.html
@@ -39,7 +39,7 @@
 
 		</div>
 	</div> -->
-	<slick init-onload=true data-slick='{"slidesToShow": 4, "slidesToScroll": 1}'>
+	<slick data-slick='{"slidesToShow": 4, "slidesToScroll": 1}'>
 	 <div ng-repeat="slide in secondary_slideshow_hero.images">
 	 	<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" style="display: block; margin: 0 auto; min-width: 100%; min-height: 100%; width: auto!important; height: auto!important;">
 	 </div>
