--- a/lib/client/app/application/landing/partials/slideshow_2.html
+++ b/lib/client/app/application/landing/partials/slideshow_2.html
@@ -16,7 +16,7 @@
     @media screen and (max-width: 839px) and (min-width: 480px){.slideshow_slide_image {height:100%!important; width: auto!important;}}
     @media screen and (max-width: 479px){.slideshow_slide_image {height:100%!important; width: auto!important;}}
 </style>
-<div class="lightweight-hero--slideshow component slideshow" hero-element style="position: relative;">
+<div style="position: relative; height: 350px; width: 100%;">
 	<!-- <span id="top" hash="top" style="position: absolute; top:-100px; left: 0; height: 1px; width: 1px;"></span>
 
 	<div class="slide--display" style="width: 100%;" hero-slider-content-container ng-repeat="slide in secondary_slideshow_hero.images" orientation-aware>
