--- a/lib/client/app/stylesheets/slideshow.css
+++ b/lib/client/app/stylesheets/slideshow.css
@@ -35,20 +35,19 @@
 /* Media */
 
 .slideshow_slide_image {
-  opacity: 0;
   will-change: opacity;
 }
 .slideshow_slide_image.slide-transition {
   opacity: .75
 }
-.slideshow_slide_image.ng-hide-add,
+/*.slideshow_slide_image.ng-hide-add,
 .slideshow_slide_image.ng-hide-remove {
   transition: all linear 0.5s;
 }
 .slideshow_slide_image.ng-hide {
   opacity: 0;
   display: inline-block!important;
-}
+}*/
 /* Media */
 
 /* Text */
