--- a/lib/client/app/application/landing/partials/slideshow_2.html
+++ b/lib/client/app/application/landing/partials/slideshow_2.html
@@ -12,34 +12,11 @@
         position: absolute;
         top: 0px;
     }
-    .slideshow_slide_image {transform: scale(1.1);}
     @media screen and (max-width: 839px) and (min-width: 480px){.slideshow_slide_image {height:100%!important; width: auto!important;}}
     @media screen and (max-width: 479px){.slideshow_slide_image {height:100%!important; width: auto!important;}}
 </style>
 <div class="lightweight-hero--slideshow component slideshow" hero-element style="position: relative;">
-	<!-- <span id="top" hash="top" style="position: absolute; top:-100px; left: 0; height: 1px; width: 1px;"></span>
-
-	<div class="slide--display" style="width: 100%;" hero-slider-content-container ng-repeat="slide in secondary_slideshow_hero.images" orientation-aware>
-		<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" ng-class="{'slide-transition': $index == visible_slide}" ng-show="$index == visible_slide" style="display: block; margin: 0 auto; min-width: 100%; min-height: 100%; width: auto!important; height: auto!important;">
-
-		<div ng-show="$index == visible_slide" style="position: absolute; height: 100%; width: 100%; top: 0; left: 0; z-index: 2;" layout="row" layout-align="center center" layout-wrap>
-
-			<md-button ng-click="left_slideshow_control()" class="md-fab custom-deep-button" aria-label="left slideshow control" style="position: absolute; bottom: calc(50% - 36px;); left: 8px; background-color: {{primary_hue_normal.value}}!important; z-index: 1;">
-    			<md-icon style="color: {{base_hue_lighter.value}};">keyboard_arrow_left</md-icon>
-			</md-button>
-
-			<md-button ng-click="right_slideshow_control()" class="md-fab custom-deep-button" aria-label="right slideshow control" style="position: absolute; bottom: calc(50% - 36px;); right: 8px; background-color: {{primary_hue_normal.value}}!important; z-index: 1;">
-    			<md-icon style="color: {{base_hue_lighter.value}};">keyboard_arrow_right</md-icon>
-			</md-button>
-		
-			<span flex="100" flex-sm="75" flex-gt-sm="50" style="text-align: center;">
-				<p class="slide-text-one" ng-class="{'active': $index == visible_slide}" style="color: {{base_hue_lightest.value}};">{{slide.metadata.name}}</p>
-				<p class="slide-text-two" ng-class="{'active': $index == visible_slide}" style="color: {{base_hue_lightest.value}};">{{slide.metadata.description}}</p>
-			</span>
-
-		</div>
-	</div> -->
-	<slick ng-if="secondary_slideshow_hero.images.length" dots=true infinite=true speed=3000 autoplay=true slides-to-show=1 touch-move=true slides-to-scroll=1>
+	<slick style="max-height: 100%;" ng-if="secondary_slideshow_hero.images.length" dots=true infinite=true speed=3000 autoplay=true slides-to-show=1 touch-move=true slides-to-scroll=1>
 	 <div ng-repeat="slide in secondary_slideshow_hero.images">
 	 	<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" style="display: block; margin: 0 auto; min-width: 100%; min-height: 100%; width: auto!important; height: auto!important;">
 	 </div>
