--- a/lib/client/app/application/landing/partials/slideshow_2.html
+++ b/lib/client/app/application/landing/partials/slideshow_2.html
@@ -18,7 +18,7 @@
 <div class="lightweight-hero--slideshow component slideshow" hero-element style="position: relative;">
 	<slick style="max-height: 100%;" ng-if="secondary_slideshow_hero.images.length" dots=true infinite=true speed=3000 autoplay=true slides-to-show=1 touch-move=true slides-to-scroll=1>
 	 <div ng-repeat="slide in secondary_slideshow_hero.images">
-	 	<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" style="display: block; margin: 0 auto; min-width: 100%; min-height: 100%; width: auto!important; height: auto!important;">
+	 	<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" style="display: block; margin: 0 auto; height: 100%; width: auto!important;">
 	 </div>
 	</slick>
 </div>
