--- a/lib/client/app/application/landing/partials/slideshow_2.html
+++ b/lib/client/app/application/landing/partials/slideshow_2.html
@@ -15,11 +15,16 @@
     @media screen and (max-width: 839px) and (min-width: 480px){.slideshow_slide_image {height:100%!important; width: auto!important;}}
     @media screen and (max-width: 479px){.slideshow_slide_image {height:100%!important; width: auto!important;}}
 </style>
+<style>
+ .slick-dots {
+ 	position: absolute; top: 640px; right: 0;
+ }
+</style>
 <div layout="row" layout-align="center center" layout-wrap>
 	<div flex="100" style="position: relative; height: 700px;">
 		<slick ng-if="secondary_slideshow_hero.images.length" infinite=true speed=1000 waitForAnimate=false pauseOnHover=false autoplay=true centerMode=true slides-to-show=3 touch-move=true slides-to-scroll=1>
 		 <div ng-repeat="slide in secondary_slideshow_hero.images">
-		 	<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}">
+		 	<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" style="display: block; margin: 0 auto; min-width: 100%; width: auto!important; min-height: 700px!important; height: auto;">
 		 </div>
 		</slick>
 	</div>
