--- a/lib/client/app/application/landing/partials/slideshow_2.html
+++ b/lib/client/app/application/landing/partials/slideshow_2.html
@@ -25,7 +25,7 @@
 		<h1 class="type heading" ng-attr-style="color: {{base_hue_lightest.value}}; line-height: 64px; margin: 0; font-weight: bold;">mma Featured Images</h1>
 	</div>
 	<div flex="100" style="position: relative; height: 700px;">
-		<slick ng-if="secondary_slideshow_hero.images.length" infinite=true speed=1000 waitForAnimate=false pauseOnHover=false autoplay=true centerMode=true slides-to-show=2 touch-move=true slides-to-scroll=1>
+		<slick ng-if="secondary_slideshow_hero.images.length" infinite=true speed=1000 mobileFirst=true waitForAnimate=false pauseOnHover=false autoplay=true centerMode=true slides-to-show=2 touch-move=true slides-to-scroll=1>
 		 <div ng-repeat="slide in secondary_slideshow_hero.images">
 		 	<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" style="display: block; margin: 0 auto; min-width: 100%; width: auto!important; min-height: 700px!important; height: auto;">
 		 </div>
