--- a/lib/client/app/application/landing/partials/slideshow_2.html
+++ b/lib/client/app/application/landing/partials/slideshow_2.html
@@ -19,8 +19,9 @@
  .slick-dots {
  	position: absolute; top: 640px; right: 0;
  }
+	.slick-track {width: {{scroll_bar_aware_window_width}}px!important;}
 </style>
-<div layout="row" layout-align="center center" layout-wrap>
+<div layout="row" layout-align="center center" layout-wrap ng-attr-style="background-color: {{base_hue_darkest.value}};">
 	<div flex="100" style="text-align: center; margin-top: 64px; z-index: 2">
 		<h1 class="type heading" ng-attr-style="color: {{base_hue_lightest.value}}; line-height: 64px; margin: 0; font-weight: bold;">mma Featured Images</h1>
 	</div>
