--- a/lib/client/app/application/landing/partials/slideshow_2.html
+++ b/lib/client/app/application/landing/partials/slideshow_2.html
@@ -17,9 +17,8 @@
 </style>
 <style>
  .slick-dots {
- 	position: absolute; top: 640px; right: 0;
+ 	position: absolute; top: 16px; right: -40%;
  }
-	.slick-track {width: {{scroll_bar_aware_window_width}}px!important;}
 </style>
 <div layout="row" layout-align="center center" layout-wrap ng-attr-style="background-color: {{base_hue_darkest.value}};">
 	<div flex="100" style="text-align: center; margin-top: 64px; z-index: 2">
