--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -40,9 +40,11 @@
 									<md-icon md-svg-src="media/twitter.png" aria-label="Share onTwitter"></md-icon>
 								</md-button>
 							</a>
-							<md-button aria-label="Facebook" class="md-fab md-raised md-mini">
-								<md-icon md-svg-src="media/facebook.png" aria-label="Share on Facebook"></md-icon>
-							</md-button>
+							<a href="#" socialshare socialshare-provider="facebook" socialshare-type="share">
+								<md-button aria-label="Facebook" class="md-fab md-raised md-mini">
+									<md-icon md-svg-src="media/facebook.png" aria-label="Share on Facebook"></md-icon>
+								</md-button>
+							</a>
 							<md-button aria-label="Instagram" class="md-fab md-raised md-mini">
 								<md-icon md-svg-src="media/instagram-mma-green.png" aria-label="Share on Instagram"></md-icon>
 							</md-button>
