--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -40,7 +40,7 @@
 									<md-icon md-svg-src="media/twitter.png" aria-label="Share onTwitter"></md-icon>
 								</md-button>
 							</a>
-							<a href="#" socialshare socialshare-provider="facebook" socialshare-type="share">
+							<a href="#" socialshare socialshare-provider="facebook" socialshare-type="sharer">
 								<md-button aria-label="Facebook" class="md-fab md-raised md-mini">
 									<md-icon md-svg-src="media/facebook.png" aria-label="Share on Facebook"></md-icon>
 								</md-button>
