--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -37,16 +37,16 @@
 						<md-fab-actions>
 							<a href="#" socialshare socialshare-provider="twitter" socialshare-text="{{projectPage.data.title}}" socialshare-hashtags="mma texas" socialshare-url="{{pageURL}}">
 								<md-button aria-label="Twitter" class="md-fab md-raised md-mini">
-									<md-icon md-svg-src="media/twitter.png" aria-label="Share onTwitter"></md-icon>
+									<md-icon md-svg-src="media/003-twitter.svg" aria-label="Share onTwitter"></md-icon>
 								</md-button>
 							</a>
-							<a href="#" socialshare socialshare-provider="facebook" socialshare-type="sharer">
+							<a href="#" socialshare socialshare-provider="facebook" socialshare-text="{{projectPage.data.title}}" socialshare-trigger="click" socialshare-type="sharer">
 								<md-button aria-label="Facebook" class="md-fab md-raised md-mini">
-									<md-icon md-svg-src="media/facebook.png" aria-label="Share on Facebook"></md-icon>
+									<md-icon md-svg-src="media/001-facebook.svg" aria-label="Share on Facebook"></md-icon>
 								</md-button>
 							</a>
 							<md-button aria-label="Instagram" class="md-fab md-raised md-mini">
-								<md-icon md-svg-src="media/instagram-mma-green.png" aria-label="Share on Instagram"></md-icon>
+								<md-icon md-svg-src="media/002-instagram.svg" aria-label="Share on Instagram"></md-icon>
 							</md-button>
 						</md-fab-actions>
 
