--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -35,7 +35,7 @@
 						</md-fab-trigger>
 
 						<md-fab-actions>
-							<a href="#" socialshare socialshare-provider="twitter" socialshare-text="{{projectPage.data.title}}" socialshare-hashtags="mma texas" socialshare-url="{{whole_url}}" socialshare-trigger="click">
+							<a href="#" socialshare socialshare-provider="twitter" socialshare-text="{{projectPage.data.title}}" socialshare-hashtags="mmatexas, {{projectPage.data.title}}" socialshare-url="{{whole_url}}" socialshare-trigger="click">
 								<md-button aria-label="Twitter" class="md-fab md-raised md-mini">
 									<md-icon ng-attr-style="color: {{base_hue_lighter.value}}" md-svg-src="media/003-twitter.svg" aria-label="Share on Twitter"></md-icon>
 								</md-button>
@@ -45,7 +45,7 @@
 									<md-icon ng-attr-style="color: {{base_hue_lighter.value}}" md-svg-src="media/001-facebook.svg" aria-label="Share on Facebook"></md-icon>
 								</md-button>
 							</a>
-							<a href="#" socialshare socialshare-provider="linkedin" socialshare-url="{{whole_url}}" socialshare-text="{{projectPage.data.title}}" socialshare-description="{{projectPage.data.page.contents[1]}}" socialshare-source="{{settings.data.company_name}}">
+							<a href="#" socialshare socialshare-provider="linkedin" socialshare-url="{{whole_url}}" socialshare-text="{{projectPage.data.title}}" socialshare-trigger="click" socialshare-description="{{projectPage.data.page.contents[1]}}" socialshare-source="{{settings.data.company_name}}">
 								<md-button aria-label="Linked In" class="md-fab md-raised md-mini" socialshare-trigger="click">
 									<md-icon ng-attr-style="color: {{base_hue_lighter.value}}" md-svg-src="media/005-linkedin.svg" aria-label="Share on Linked In"></md-icon>
 								</md-button>
