--- a/lib/client/app/application/landing/partials/slideshow_2.html
+++ b/lib/client/app/application/landing/partials/slideshow_2.html
@@ -5,7 +5,7 @@
         top: 0px;
     }
     @media screen and (max-width: 839px) and (min-width: 480px){.slideshow_slide_image {height:100%!important; width: auto!important;}}
-    @media screen and (max-width: 479px){.slideshow_slide_image {height:100%!important; width: auto!important;}}
+    @media screen and (max-width: 479px){.slideshow_slide_image {height:100%!important; min-height: 100%!important;}}
 </style>
 <style ng-if="!scrollable">
 	.slide--display {
@@ -13,7 +13,7 @@
         top: 0px;
     }
     @media screen and (max-width: 839px) and (min-width: 480px){.slideshow_slide_image {height:100%!important; width: auto!important;}}
-    @media screen and (max-width: 479px){.slideshow_slide_image {height:100%!important; width: auto!important;}}
+    @media screen and (max-width: 479px){.slideshow_slide_image {height:100%!important; min-height: 100%!important;}}
 </style>
 <div layout="row" layout-align="center center" layout-wrap ng-attr-style="background-color: {{base_hue_darkest.value}};">
 	<div flex="100" style="position: relative; height: 600px;">
