--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -1,6 +1,15 @@
 <style>
 	.header-ms-explorer {position: fixed; width: 100%;}
 </style>
+<div ng-show="project_lightbox" style="position: fixed; top: 0; left: 0; bottom: 0; right: 0; background: rgba(0,0,0,.25);" layout="row" layout-align="center center" layout-wrap>
+	<div flex="100" style="position: relative; height: 700px;">
+		<slick ng-if="projectImages.images.length"  responsive=slick_breakpoints infinite=true speed=1000 mobileFirst=true waitForAnimate=false pauseOnHover=false pauseOnFocus=false autoplay=true centerMode=true slides-to-show=1 touch-move=true slides-to-scroll=1 initialSlide=start_project_lightbox>
+		 <div ng-repeat="slide in projectImages.images">
+		 	<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" style="display: block; margin: 0 auto; min-width: 100%; width: auto!important; min-height: 700px!important; height: auto;">
+		 </div>
+		</slick>
+	</div>
+</div>
 <md-content class="page project" style="height: {{window_height}}px">
 	<section style="background: {{base_hue_lighter.value}}">
 
@@ -80,7 +89,7 @@
 			<div class="sidebar form" layout="row" layout-wrap flex="90" flex-sm="90" flex-gt-sm="25" layout-align="start start" style="z-index: 1; min-height: 200px; margin-top: 8px; padding: 0; margin-bottom: 40px;">
 				<div flex="100" ng-show="projectImages.length > 0" style="margin: 0 0 8px 0; padding: 0;">
 	                <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="1:1" md-row-height="1:1" md-gutter="8px" md-gutter-gt-sm="8px">
-	                    <md-grid-tile class="md-whiteframe-8dp" ng-repeat="tile in projectImages | limitTo: 24" md-rowspan="3" md-rowspan-xs="2" md-rowspan-sm="2" md-colspan="3" md-colspan-sm="2" md-colspan-xs="2" style="overflow: hidden;">
+	                    <md-grid-tile ng-click="open_lightweight_box($index)" class="md-whiteframe-8dp" ng-repeat="tile in projectImages | limitTo: 24" md-rowspan="3" md-rowspan-xs="2" md-rowspan-sm="2" md-colspan="3" md-colspan-sm="2" md-colspan-xs="2" style="overflow: hidden;">
 	                        <img ng-src="{{tile.source}}" style="width: auto; max-width:300%; min-height: 100%; transform: scale(.6);">
 	                        <!-- <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.metadata.tags[0]}}</h3></md-grid-tile-footer> -->
 	                    </md-grid-tile>
