--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -18,7 +18,7 @@
 	        <md-icon style="color: {{base_hue_lighter.value}};">build</md-icon>
 	    </md-button>
 
-	    <div ng-show="project_lightbox" style="position: fixed; top: 0; left: 0; bottom: 0; right: 0; background: rgba(255,255,255,.75); z-index: 20;" layout="row" layout-align="center center" layout-wrap>
+	    <div ng-show="project_lightbox" style="position: absolute; top: 0; left: 0; background: rgba(0,0,0,.75); z-index: 20; width: 100%; height: 100%;" layout="row" layout-align="center center" layout-wrap>
 			<md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="close_lightweight_box()" ng-attr-style="position: absolute; top: 36px; right: 64px; background-color: {{primary_hue_normal.value}}!important;">
 		            <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">close</md-icon>
 		    </md-button>
