--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -5,8 +5,8 @@
 	<md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="close_lightweight_box()" ng-attr-style="position: absolute; top: 24px; right: 16px; background-color: {{primary_hue_normal.value}}!important;">
             <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">close</md-icon>
     </md-button>
-	<div flex="100" style="position: relative; height: 600px;">
-		<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{project_image_lightbox}}" style="display: block; margin: 0 auto; width: auto!important; max-width: {{window_width - 100}}px!important; min-height: 600px; min-width: 600px; height: auto;">
+	<div flex="100" style="position: relative; height: 700px;">
+		<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{project_image_lightbox}}" style="display: block; margin: 0 auto; width: auto!important; max-height: {{window_height - 100}}px!important; max-height: 700px; min-width: 600px; height: auto;">
 	</div>
 </div>
 <md-content class="page project" style="height: {{window_height}}px">
