--- a/lib/client/app/stylesheets/pages.css
+++ b/lib/client/app/stylesheets/pages.css
@@ -60,6 +60,7 @@
 }
 
 .spotlight.hero {height: 408px;}
+.page.spotlight img {opacity: .2!important;}
 .page.spotlight .sidebar.form {margin-top: -400px;}
 
 @media (max-width: 959px) {
