project page update to hero image with opacity and color background

--- a/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
+++ b/lib/client/app/application/pages/spotlight/partials/spotlight-template.html
@@ -27,7 +27,7 @@
 			<!-- Page Title -->
 			<div class="spotlight hero" layout="row" flex="100" style="position: relative; top: 0; overflow: hidden; text-align: center; background-color: {{primary_hue_normal.value}};">
 				<div flex="100" style="height: 420px; width: 100%; margin: 0; overflow: hidden; position: relative;">
-					<img style="min-height: 100%; max-width: 100%; min-width: 100%; height: auto; width: auto; position: absolute; bottom: 0;" ng-src="{{spotlightPage.data.page.background.images.source}}">
+					<img ng-src="{{spotlightPage.data.page.background.images.source}}">
 				</div>
 			</div>
 
