--- a/lib/client/app/stylesheets/pages.css
+++ b/lib/client/app/stylesheets/pages.css
@@ -60,7 +60,17 @@
 }
 
 .spotlight.hero {height: 408px;}
-.page.spotlight img {opacity: .2!important;}
+.page.spotlight img {
+	opacity: .2!important; 
+	min-height:100%!important; 
+	max-width: 100%!important; 
+	min-width: 100%!important; 
+	height: auto!important; 
+	width: auto!important; 
+	position: absolute!important; 
+	bottom: 0!important; 
+	left: 0!important;
+}
 .page.spotlight .sidebar.form {margin-top: -400px;}
 
 @media (max-width: 959px) {
